#147 - Set proper margins and avoid alignment on small screens

--- a/application/site/public/theme/mobile/css/ie9.css
+++ b/application/site/public/theme/mobile/css/ie9.css
@@ -38,5 +38,4 @@ ul.column--double li, ul.column--triple li, ul.column--quad li {
     width: 33%; }
   ul.column--quad li {
     float: left;
-    width: 25%; }
- }
+    width: 25%; } }
